--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ homework/Day_002_first_EDA.ipynb
 homework/Day_003-1_build_dataframe_from_scratch.ipynb
 homework/Day_003-2_read_and_write_files.ipynb
 homework/Day_003-3_read_and_write_files.ipynb
+homework/Day_001_example_of_metrics.ipynb
