--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ homework/Day_003-1_build_dataframe_from_scratch.ipynb
 homework/Day_003-2_read_and_write_files.ipynb
 homework/Day_003-3_read_and_write_files.ipynb
 homework/Day_001_example_of_metrics.ipynb
+homework/.ipynb_checkpoints/Day_002_first_EDA-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_002_HW-checkpoint.ipynb
+.ipynb_checkpoints/Day_001_HW-checkpoint.ipynb
+.ipynb_checkpoints/Day_001_example_of_metrics-checkpoint.ipynb
+homework/.DS_Store
