--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ homework/.ipynb_checkpoints/Day_002_HW-checkpoint.ipynb
 .ipynb_checkpoints/Day_001_HW-checkpoint.ipynb
 .ipynb_checkpoints/Day_001_example_of_metrics-checkpoint.ipynb
 homework/.DS_Store
+.DS_Store
