--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ homework/.ipynb_checkpoints/Day_002_HW-checkpoint.ipynb
 .ipynb_checkpoints/Day_001_example_of_metrics-checkpoint.ipynb
 homework/.DS_Store
 .DS_Store
+homework/.ipynb_checkpoints/Day_003-2_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_003-1_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_003-1_build_dataframe_from_scratch-checkpoint.ipynb
