--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ homework/.DS_Store
 homework/.ipynb_checkpoints/Day_003-2_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_003-1_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_003-1_build_dataframe_from_scratch-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_003-3_read_and_write_files-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_003-2_read_and_write_files-checkpoint.ipynb
