--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ homework/.ipynb_checkpoints/Day_003-1_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_003-1_build_dataframe_from_scratch-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_003-3_read_and_write_files-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_003-2_read_and_write_files-checkpoint.ipynb
+homework/Day_004_column_data_type.ipynb
+homework/.ipynb_checkpoints/Day_004_column_data_type-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_004_HW-checkpoint.ipynb
