--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ homework/.ipynb_checkpoints/Day_003-2_read_and_write_files-checkpoint.ipynb
 homework/Day_004_column_data_type.ipynb
 homework/.ipynb_checkpoints/Day_004_column_data_type-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_004_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_005_HW-checkpoint.ipynb
