--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ homework/Day_004_column_data_type.ipynb
 homework/.ipynb_checkpoints/Day_004_column_data_type-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_004_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_005_HW-checkpoint.ipynb
+homework/Day_006_outliers_detection.ipynb
+homework/.ipynb_checkpoints/Day_006_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_006_outliers_detection-checkpoint.ipynb
