--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ homework/.ipynb_checkpoints/Day_005_HW-checkpoint.ipynb
 homework/Day_006_outliers_detection.ipynb
 homework/.ipynb_checkpoints/Day_006_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_006_outliers_detection-checkpoint.ipynb
+homework/Day_007_handle_outliers.ipynb
+homework/.ipynb_checkpoints/Day_007_handle_outliers-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_007_HW-checkpoint.ipynb
