--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ homework/.ipynb_checkpoints/Day_006_outliers_detection-checkpoint.ipynb
 homework/Day_007_handle_outliers.ipynb
 homework/.ipynb_checkpoints/Day_007_handle_outliers-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_007_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_008_dataFrame_operation-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_008_HW-checkpoint.ipynb
+homework/Day_008_dataFrame_operation.ipynb
