--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ homework/.ipynb_checkpoints/Day_007_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_008_dataFrame_operation-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_008_HW-checkpoint.ipynb
 homework/Day_008_dataFrame_operation.ipynb
+homework/.ipynb_checkpoints/Day_009_correlation_example-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_009_HW-checkpoint.ipynb
+homework/Day_009_correlation_example.ipynb
