--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ homework/Day_008_dataFrame_operation.ipynb
 homework/.ipynb_checkpoints/Day_009_correlation_example-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_009_HW-checkpoint.ipynb
 homework/Day_009_correlation_example.ipynb
+homework/.ipynb_checkpoints/Day_010-supplementary_correlation_and_plot_with_different_range-checkpoint.ipynb
+homework/Day_010-supplementary_correlation_and_plot_with_different_range.ipynb
+homework/.ipynb_checkpoints/Day_010_HW-checkpoint.ipynb
