--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ homework/Day_009_correlation_example.ipynb
 homework/.ipynb_checkpoints/Day_010-supplementary_correlation_and_plot_with_different_range-checkpoint.ipynb
 homework/Day_010-supplementary_correlation_and_plot_with_different_range.ipynb
 homework/.ipynb_checkpoints/Day_010_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_011_EDA_KDEplots-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_011_HW-checkpoint.ipynb
+homework/Day_011_EDA_KDEplots.ipynb
