--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ homework/.ipynb_checkpoints/Day_010_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_011_EDA_KDEplots-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_011_HW-checkpoint.ipynb
 homework/Day_011_EDA_KDEplots.ipynb
+homework/Day_012_discretizing.ipynb
+homework/.ipynb_checkpoints/Day_012_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_012_discretizing-checkpoint.ipynb
