--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ homework/Day_011_EDA_KDEplots.ipynb
 homework/Day_012_discretizing.ipynb
 homework/.ipynb_checkpoints/Day_012_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_012_discretizing-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_013_HW-checkpoint.ipynb
