--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ homework/Day_012_discretizing.ipynb
 homework/.ipynb_checkpoints/Day_012_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_012_discretizing-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_013_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_014_EDA_subplots-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_014_HW-checkpoint.ipynb
+homework/Day_014_EDA_subplots.ipynb
