--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ homework/.ipynb_checkpoints/Day_013_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_014_EDA_subplots-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_014_HW-checkpoint.ipynb
 homework/Day_014_EDA_subplots.ipynb
+homework/.ipynb_checkpoints/Day_015_EDA_heatmap-checkpoint.ipynb
+homework/Day_015_EDA_heatmap.ipynb
+homework/.ipynb_checkpoints/Day_015_HW-checkpoint.ipynb
