--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ homework/Day_014_EDA_subplots.ipynb
 homework/.ipynb_checkpoints/Day_015_EDA_heatmap-checkpoint.ipynb
 homework/Day_015_EDA_heatmap.ipynb
 homework/.ipynb_checkpoints/Day_015_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_016_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_016_first_model-checkpoint.ipynb
+homework/Day_016_first_model.ipynb
