--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,14 @@ homework/.ipynb_checkpoints/Day_015_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_016_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_016_first_model-checkpoint.ipynb
 homework/Day_016_first_model.ipynb
+homework/titanic_baseline.csv
+homework/house_baseline.csv
+homework/Day_017_Introduction_of_Feature Engineering.ipynb
+homework/data/titanic_train.csv
+homework/data/titanic_test.csv
+homework/data/taxi_data2.csv
+homework/data/taxi_data1.csv
+homework/data/house_train.csv.gz
+homework/data/house_test.csv.gz
+homework/.ipynb_checkpoints/Day_017_Introduction_of_Feature Engineering-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_017_HW-checkpoint.ipynb
