--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ homework/data/house_train.csv.gz
 homework/data/house_test.csv.gz
 homework/.ipynb_checkpoints/Day_017_Introduction_of_Feature Engineering-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_017_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_018_Feature_Types-checkpoint.ipynb
+homework/Day_018_Feature_Types.ipynb
+homework/.ipynb_checkpoints/Day_018_HW-checkpoint.ipynb
