--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ homework/.ipynb_checkpoints/Day_017_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_018_Feature_Types-checkpoint.ipynb
 homework/Day_018_Feature_Types.ipynb
 homework/.ipynb_checkpoints/Day_018_HW-checkpoint.ipynb
+homework/Day_019_Fill_NaN_and_Scalers.ipynb
+homework/.ipynb_checkpoints/Day_019_Fill_NaN_and_Scalers-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_019_HW-checkpoint.ipynb
