--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ homework/.ipynb_checkpoints/Day_018_HW-checkpoint.ipynb
 homework/Day_019_Fill_NaN_and_Scalers.ipynb
 homework/.ipynb_checkpoints/Day_019_Fill_NaN_and_Scalers-checkpoint.ipynb
 homework/.ipynb_checkpoints/Day_019_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_020_HW-checkpoint.ipynb
+homework/.ipynb_checkpoints/Day_020_Outliers-checkpoint.ipynb
+homework/Day_020_Outliers.ipynb
